fixed iPad layout issues.

--- a/assets/scss/_productDetails.scss
+++ b/assets/scss/_productDetails.scss
@@ -68,7 +68,7 @@
     .product-swiper {
         border-top: thin solid rgba($pink, 0.2);
         border-bottom: thin solid rgba($pink, 0.2);
-        @media (min-width: $large) {
+        @media (min-width: 1024px) {
             border-top: none;
         border-bottom: none;
           }
@@ -89,7 +89,7 @@
           @media (min-width: $medium) {
             height: 380px;
           }
-          @media (min-width: $large) {
+          @media (min-width: 1024px) {
             height: 660px;
             opacity: 0.4;
           }
