--- a/assets/scss/_toolbar.scss
+++ b/assets/scss/_toolbar.scss
@@ -13,6 +13,9 @@
   border-top: thin solid rgba($black, 0.2);
   box-shadow: 0px 2px 12px rgba($black, 0.3);
   z-index: 5;
+  @media (min-width: 1025px) {
+    display: none;
+  }
   #toolbar-spacer {
     width:26%;
   }
